# cad-image-cropper

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  sample.md
.agent/skills/managing-linear-tasks/: SKILL.md
.claude/agents/: cv-ml-engineer.md  python-code-reviewer.md  python-qa-tester.md  solution-architect.md
.claude/skills/managing-linear-tasks/: SKILL.md
.specify/memory/: constitution.md
specs/001-floor-plan-crop/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-floor-plan-crop/checklists/: requirements.md
specs/001-floor-plan-crop/contracts/: cli-contract.md
specs/002-modify-data-flow/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-modify-data-flow/checklists/: requirements.md
specs/002-modify-data-flow/contracts/: cli-contract.md
specs/003-fix-panel-crop/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/003-fix-panel-crop/checklists/: requirements.md
specs/004-crop-left-panel/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/004-crop-left-panel/checklists/: requirements.md
src/cad_image_cropper/: cli.py  constants.py  exceptions.py
src/cad_image_cropper/detectors/: border_detector.py  classical_detector.py  sam_detector.py  two_stage_detector.py
src/cad_image_cropper/models/: crop_region.py  detection_method.py  detection_result.py  image_metadata.py  processing_result.py  processing_status.py
tests/contract/: test_cli_contract.py
tests/integration/: test_pipeline.py
tests/unit/: test_detectors.py  test_models.py  test_services.py
(+6 files in other folders)
